<resources>
    <string name="app_name">First_Project</string>
    <string name="page_title">Registration Students</string>
    <string name="studentId_text">ID:</string>
    <string name="studentId_hint">ID</string>
    <string name="studentName_hint">First Name</string>
    <string name="studentName_text">First Name:</string>
    <string name="studentSurname_hint">Last Name</string>
    <string name="studentBirthDate_hint">Birth Date</string>
    <string name="studentGenderMale_hint">Male</string>
    <string name="studentGenderFemale_hint">Female</string>
    <string name="Gpa_txt">Gpa</string>
    <string name="studentGPA_hint">GPA</string>
    <string name="birthPlace_hint">Birth Place</string>
    <string name="gender_hint">Gender</string>
    <string name="faculty_hint">Faculty</string>
    <string name="department_hint">Department</string>
    <string name="scholarship_hint">Scholarship</string>
    <string name="studentScholarshipFull_hint">Full</string>
    <string name="studentScholarshipHalf_hint">Half</string>
    <string name="studentScholarshipNone_hint">None</string>
    <string name="buttonExit_hint">Exit</string>
    <string name="buttonReset_hint">Reset</string>
    <string name="buttonSubmit_hint">Submit</string>
    <string name="notnecessary_hint">Not Necessary</string>
    <string name="additionalInfo_hint">Additional Info</string>



    <string-array name="tr_city">

        <item>İstanbul</item>
        <item>Ankara</item>
        <item>İzmir</item>
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyonkarahisar</item>
        <item>Ağrı</item>
        <item>Aksaray</item>
        <item>Amasya</item>
        <item>Antalya</item>
        <item>Ardahan</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bartın</item>
        <item>Batman</item>
        <item>Bayburt</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Düzce</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkari</item>
        <item>Hatay</item>
        <item>Iğdır</item>
        <item>Isparta</item>
        <item>Kahramanmaraş</item>
        <item>Karabük</item>
        <item>Karaman</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırıkkale</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kilis</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Mardin</item>
        <item>Mersin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Osmaniye</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Şanlıurfa</item>
        <item>Şırnak</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yalova</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>

    </string-array>


    <string-array name="tr_city_number">

        <item>34</item>
        <item>6</item>
        <item>35</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>68</item>
        <item>5</item>
        <item>7</item>
        <item>75</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>74</item>
        <item>72</item>
        <item>69</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>81</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>76</item>
        <item>32</item>
        <item>46</item>
        <item>78</item>
        <item>70</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>71</item>
        <item>39</item>
        <item>40</item>
        <item>79</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>47</item>
        <item>33</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>80</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>63</item>
        <item>73</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>64</item>
        <item>65</item>
        <item>77</item>
        <item>66</item>
        <item>67</item>

    </string-array>
</resources>